--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins|Satisfy|Gloria+Hallelujah&display=swap"
+      href="https://fonts.googleapis.com/css?family=Poppins|Satisfy|Gloria+Hallelujah|VT323|Dancing+Script|Fira+Sans&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -27,8 +27,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="header"><h1>Cortney Smith</h1></div>
+    <div id="header"></div>
     <div id="main"></div>
+    <div id="footer"></div>
+    <div id="copyright">Copyright &copy; 2019 Cortney Smith</div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
